[B] Get world map endpoint
