# src/apps/CryptoWars/backend/Controllers/Worlds/WorldResponse.ts
@@ -1,0 +1,5 @@
+import { WorldMapProjection } from '../../../../../Contexts/CryptoWars/Worlds/Domain/World';
+
+export type WorldResponse = {
+  world: WorldMapProjection;
+};
